# SPDX-FileCopyrightText: 2021-2024 Helmholtz-Zentrum hereon GmbH
# SPDX-FileCopyrightText: 2020-2021 Helmholtz-Zentrum Geesthacht
# SPDX-FileCopyrightText: 2016-2024 University of Lausanne
#
# SPDX-License-Identifier: CC0-1.0

[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 61.0', 'versioneer[toml]']

[project]
name = "psy-reg"
dynamic = ["version"]
description = "Psyplot plugin for visualizing and calculating regression plots"

readme = "README.md"
keywords = [
    "visualization",
    "psyplot",
    "netcdf",
    "matplotlib",
    "regression",
    "statistics",
]

authors = [
    { name = 'Philipp S. Sommer', email = 'philipp.sommer@hereon.de' },
]
maintainers = [
    { name = 'Philipp S. Sommer', email = 'philipp.sommer@hereon.de' },
]
license = { text = 'LGPL-3.0-only' }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = '>= 3.9'
dependencies = [
    "psyplot>=1.5.0",
    # add your dependencies here
    "psy-simple>=1.3.0",
    "statsmodels",
    "scipy",
]

[project.urls]
Homepage = 'https://codebase.helmholtz.cloud/psyplot/psy-reg'
Documentation = "https://psyplot.github.io/psy-reg"
Source = "https://codebase.helmholtz.cloud/psyplot/psy-reg"
Tracker = "https://codebase.helmholtz.cloud/psyplot/psy-reg/issues/"


[project.entry-points."psyplot"]
plugin = "psy_reg.plugin"

[project.optional-dependencies]
testsite = [
    "tox",
    "isort==5.12.0",
    "black==23.1.0",
    "blackdoc==0.3.8",
    "flake8==6.0.0",
    "pre-commit",
    "mypy",
    "pytest-cov",
    "reuse",
    "cffconvert",
    "pytest-xdist",
]
docs = [
    "autodocsumm",
    "sphinx-rtd-theme",
    "hereon-netcdf-sphinxext",
    "sphinx-design",

]
dev = [
    "psy-reg[testsite]",
    "psy-reg[docs]",
    "PyYAML",
    "types-PyYAML",
]


[tool.mypy]
ignore_missing_imports = true

[tool.setuptools]
zip-safe = false
license-files = ["LICENSES/*"]

[tool.setuptools.package-data]
psy_reg = ["py.typed"]

[tool.setuptools.packages.find]
namespaces = false
exclude = [
    'docs',
    'tests*',
    'examples'
]

[tool.pytest.ini_options]
addopts = '-v'

[tool.versioneer]
VCS = 'git'
style = 'pep440'
versionfile_source = 'psy_reg/_version.py'
versionfile_build = 'psy_reg/_version.py'
tag_prefix = 'v'
parentdir_prefix = 'psy-reg-'

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["psy_reg"]
float_to_top = true
known_first_party = "psy_reg"

[tool.black]
line-length = 79
target-version = ['py39']

[tool.coverage.run]
omit = ["psy_reg/_version.py"]
